<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainBackground"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="3dp"
        android:clickable="true"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/mainCard">

        <RelativeLayout
            android:id="@+id/item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/org_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/mainCard"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_centerInParent="true"
                android:innerRadius="0dp"
                android:shape="ring"
                app:cardCornerRadius="75dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:background="@drawable/mountain"
                    android:contentDescription="@string/mountains"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/org_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/org_photo"
                android:text="@string/user_name"
                android:textColor="@color/standartText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/org_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/org_name"
                android:layout_toEndOf="@+id/org_photo"
                android:text="@string/user_phone"
                android:textColor="@color/standartText"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/org_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/org_phone"
                android:layout_toEndOf="@+id/org_photo"
                android:text="@string/user_id"
                android:textColor="@color/standartText"
                android:textSize="13sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>