<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/item2_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="3dp"
        android:clickable="true"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/mainCard">

        <RelativeLayout
            android:id="@+id/item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/location_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_location_on_24"
                android:backgroundTint="@color/primaryText"
                android:contentDescription="@string/mountains"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/org_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/location_photo"
                android:layout_alignParentTop="true"
                android:text="@string/user_name"
                android:textColor="@color/standartText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/org_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/location_photo"
                android:layout_below="@+id/org_name"
                android:text="@string/user_id"
                android:textColor="@color/standartText"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/phone_photo"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@+id/org_id"
                android:layout_alignParentStart="true"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_call_black_24"
                android:backgroundTint="@color/primaryText"
                android:contentDescription="@string/mountains"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/org_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/location_photo"
                android:layout_below="@+id/org_id"
                android:layout_marginVertical="5dp"
                android:layout_toEndOf="@+id/phone_photo"
                android:text="@string/user_phone"
                android:textColor="@color/standartText"
                android:textSize="13sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>