<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Профиль" />

    <ScrollView
        android:id="@+id/profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/VerticalProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                app:cardBackgroundColor="@color/mainCard">

                <RelativeLayout
                    android:id="@+id/profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mainCard"
                    android:padding="16dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/person_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/mainCard"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="16dp"
                        android:layout_centerInParent="true"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        app:cardCornerRadius="75dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_gravity="center"
                            android:background="@drawable/mountain"
                            android:contentDescription="@string/mountains"
                            android:scaleType="fitXY" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/person_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/person_photo"
                        android:text="@string/user_name"
                        android:textColor="@color/standartText"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/person_name"
                        android:layout_toEndOf="@+id/person_photo"
                        android:text="@string/user_phone"
                        android:textColor="@color/standartText"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/person_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phone_number"
                        android:layout_toEndOf="@+id/person_photo"
                        android:text="@string/user_id"
                        android:textColor="@color/standartText"
                        android:textSize="13sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/qr_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                app:cardBackgroundColor="@color/mainCard">

                <RelativeLayout
                    android:id="@+id/qr_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mainCard"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text_for_qr_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="false"
                        android:text="@string/prop"
                        android:textAlignment="center"
                        android:textColor="@color/standartText"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/qr_image"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_below="@+id/text_for_qr_card"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/qr_code"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/stock_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/primaryText"
                android:text="@string/orgz"
                android:textColor="@color/titleText" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>