<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orgDescLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Описание" />

    <ScrollView
        android:id="@+id/desc_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">

        <LinearLayout
            android:id="@+id/inner_desclayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/exp_layout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_horizontal_rule_black_48"
                android:backgroundTint="@color/primaryText"
                android:contentDescription="@string/mountains"
                android:scaleType="center" />

            <androidx.cardview.widget.CardView
                android:id="@+id/mapinfo_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/mainCard">

                <RelativeLayout
                    android:id="@+id/mapinfo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/orgDescName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="#A6FFFFFF"
                        android:paddingStart="5dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/user_name"
                        android:textColor="@color/standartText"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/orgDescID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/orgDescName"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="#A6FFFFFF"
                        android:paddingStart="5dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/user_id"
                        android:textColor="@color/standartText"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/orgDescID"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="#00FFFFFF"
                        android:orientation="horizontal"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/phone_img"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/round_call_black_24"
                            android:backgroundTint="@color/primaryText"
                            android:contentDescription="@string/mountains"
                            android:scaleType="fitXY" />

                        <TextView
                            android:id="@+id/orgPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#A6FFFFFF"
                            android:paddingStart="5dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/user_phone"
                            android:textColor="@color/standartText"
                            android:textSize="14sp" />
                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/desc_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/mainCard">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/btns_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:backgroundTint="@color/standartButton"
                            android:text="Маршрут" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:backgroundTint="@color/standartButton"
                            android:text="В путь" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_for_desc_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/btns_layout"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="10dp"
                        android:text="@string/desc_prop"
                        android:textAlignment="center"
                        android:textColor="@color/standartText"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/desc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/standartButton"
                android:text="@string/orgz" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>